feat: 여러가지 stream 중간 및 종결 작업